# Presto-Framework

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GDD Future Plans.md  GDD Gameplay.md  GDD Map Making.md  GDD Overview.md  LICENSE  Makefile  Presto-Framework.code-workspace  README.md  dub.json  dub.selections.json  options.cfg  options.ini  options.json  presto-framework  run.sh  test_build
DOCS/: sonic_physics_reference.md
DOCS/SPG/: Sonic Physics Guide [PERSONAL].md
SOURCE/: main.c
SOURCE/data/: data-csv_loader.c  data-csv_loader.h  data-data.c  data-data.h  data-level_list.c  data-level_list.h  data-root.h
SOURCE/entity/: entity-sprite_object.c  entity-sprite_object.h
SOURCE/managers/: managers-animation.c  managers-animation.h  managers-audio.c  managers-audio.h  managers-entity.c  managers-entity.h  managers-error_handler.h  managers-input.c  managers-input.h  managers-root.h  managers-screen.c  managers-screen.h  managers-screen_settings.c  managers-screen_settings.h  managers-screen_state.c  managers-screen_state.h  managers-sprite.c  managers-sprite.h  (+2 more)
SPG/: Sonic Physics Guide [PERSONAL].md
docs/: COLLISION_SYSTEM_REDESIGN.md  GDD.md  MODULE_PLAYER.md
examples/: module_player_demo.c
source/: app.d  csv_tile_loader.d  debug_screen.d  screen_settings.d  screen_states.d
src/: main.c
tools/: audit_heightmaps.py  generate_heightmaps.py  generate_heightmaps.sh  generate_tile_angles.py  landing_unit_tests  landing_unit_tests.d  parity_tile_variant_test  parity_tile_variant_test.d  run_test_tile_profiles.sh  test_tile_profiles  test_tile_profiles.d
(+203 files in other folders)
